# Undecedent

./: CMakeLists.txt  PLAN.md  compile_flags.txt  lights.udmap  main.cpp  quick_run.bat  quick_run_release.bat  test.udmap  test2.udmap  test3.udmap  test4.udmap  test5.udmap  zesty.udmap
assets/fonts/: google_sans_code_msdf.fnt  google_sans_code_msdf.ppm
docs/: udmap.md
glad/include/glad/: glad.h
glad/src/: glad.c
include/undecedent/: core_draw.hpp  csg.hpp  debug_draw.hpp  deferred_renderer.hpp  displacement.hpp  editor.hpp  editor_render.hpp  editor_slice.hpp  editor_ui.hpp  entity.hpp  game_camera.hpp  game_control.hpp  geometry.hpp  map_io.hpp  material_texture.hpp  materials.hpp  math3d.hpp  physics.hpp  runtime_geometry.hpp  runtime_pick.hpp  runtime_render.hpp  runtime_render_cache.hpp  runtime_visibility.hpp  runtime_world.hpp  screen_draw.hpp  script.hpp  script_editor.hpp  script_editor_ui.hpp  sdf_text.hpp  sdl_platform.hpp  shadow_atlas.hpp  shadow_cache.hpp  texture_compression.hpp  texture_image_codec.hpp  triangulator.hpp
src/: core_draw.cpp  csg.cpp  debug_draw.cpp  deferred_renderer.cpp  displacement.cpp  editor.cpp  editor_render.cpp  editor_ui.cpp  entity.cpp  game_control.cpp  map_io.cpp  material_texture.cpp  materials.cpp  math3d.cpp  physics.cpp  runtime_geometry.cpp  runtime_pick.cpp  runtime_render.cpp  runtime_render_cache.cpp  runtime_visibility.cpp  runtime_world.cpp  screen_draw.cpp  script.cpp  script_editor.cpp  script_editor_ui.cpp  sdf_text.cpp  sdl_platform.cpp  shadow_atlas.cpp  shadow_cache.cpp  texture_compression.cpp  texture_image_codec.cpp  triangulator.cpp
tests/: core_draw_tests.cpp  csg_tests.cpp  displacement_tests.cpp  editor_entity_tests.cpp  editor_slice_tests.cpp  entity_tests.cpp  map_io_tests.cpp  materials_tests.cpp  physics_tests.cpp  runtime_geometry_tests.cpp  runtime_world_tests.cpp  script_editor_tests.cpp  script_tests.cpp  sdf_text_tests.cpp  shadow_atlas_tests.cpp  texture_codec_tests.cpp  triangulator_tests.cpp
tools/: generate_sdf_font.py
